# nmpc-codegen-V2

./: README.md
demos/: OneCircTwoRectTrailer.py  demo.py  demo1.py  demo_obs.py
demos/Robosavvy/: robosavvy.py  robosavvy_setup.py
demos/robot_controller_builds/robot_controller/casadi/: cost_function.c  cost_function_derivative_combined.c  g.c  integrator.c  proxg.c
demos/robot_controller_builds/robot_controller/globals/: globals_dyn.h
demos/robot_controller_builds/robot_controller/include/: nmpc.h
demos/robot_controller_builds/robot_controller/python_interface/: nmpc_python.h
kernel/PANOC/: nmpc.c
kernel/old_code/src_python/nmpccodegen/controller/: globals_generator.py
kernel/python_interface/: nmpc_python.c
proximal_functions/: .gitignore  CMakeLists.txt  README.md
proximal_functions/test/: CMakeLists.txt  indicator_bin_test.c  indicator_box_test.c  quicksort_test.c
src/nmpccodegen/controller/: __init__.py  globals_generator.py  nmpc_panoc.py  nmpc_problem_single_shot.py
src/nmpccodegen/controller/obstacles/: circular.py  obstacle.py  polyhedral.py  rectangular.py
src/nmpccodegen/example_models/: __init__.py  example_model.py  robot_model.py  robot_printer.py
src/nmpccodegen/models/: integrators.py  model.py  model_continious.py
src/nmpccodegen/tools/: simulator.py
test_controller_builds/demo_controller/PANOC/: nmpc.c
test_controller_builds/demo_controller/casadi/: cost_function.c  cost_function_derivative_combined.c  evaluate_constraints.c  evaluate_constraints.h  g.c  integrator.c  proxg.c
test_controller_builds/demo_controller/globals/: globals_dyn.h
test_controller_builds/demo_controller/python_interface/: nmpc_python.c
